still try fix bad view on safari

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -5,6 +5,7 @@ header
     background-color: rgba(21, 162, 255, 1)
     align-items: center
     transition: 0.3s linear
+    height: 100vh
     &.active
         left: -30%
     .welcome
